# libstringmetrics

./: AUTHORS  ChangeLog  README.md  compile.sh  esegui.sh  esegui_compila.sh  libstringmetrics.def  test.sql
old_files/: ChangeLog  compile - Copia.sh  configure.ac
src/: Makefile.am  stringmetrics.c  wrapper_functions.c  wrapper_functions.h
src/libsimmetrics/include/: metaphone.h  tokenizer.h
src/libsimmetrics/simmetrics/: jaro.c  tokenizer.c
